# orchard-rs

./: .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  TESTS.md  build.rs  issues.md
.github/workflows/: ci.yml  publish.yml
src/: defaults.rs  error.rs  lib.rs
src/client/: mod.rs  moondream.rs  privacy_filter.rs  response.rs  responses.rs
src/engine/: fetch.rs  lifecycle.rs  mod.rs  multiprocess.rs
src/formatter/: control_tokens.rs  mod.rs  multimodal.rs
src/ipc/: client.rs  endpoints.rs  mod.rs  serialization.rs
src/model/: mod.rs  registry.rs  resolver.rs
tests/: e2e.rs  e2e_basic.rs  e2e_batching.rs  e2e_client.rs  e2e_multimodal.rs  e2e_stop_sequences.rs  e2e_structured_generation.rs  functional.rs  golden.rs  prefix_bench.rs
tests/e2e/: e2e_basic.rs  e2e_batching.rs  e2e_best_of.rs  e2e_capabilities.rs  e2e_client.rs  e2e_concurrency_bug.rs  e2e_determinism.rs  e2e_golden_path.rs  e2e_logprobs.rs  e2e_multi_candidate.rs  e2e_multi_token.rs  e2e_multimodal.rs  e2e_responses_basic.rs  e2e_responses_structured.rs  e2e_responses_tools.rs  e2e_shared_prefix_bench.rs  e2e_stop_sequences.rs  e2e_structured_generation.rs  e2e_unicode_payload.rs  fixture.rs  golden_io.rs
tests/functional/: basic.rs  batching.rs  best_of.rs  capabilities.rs  client.rs  determinism.rs  logprobs.rs  multi_candidate.rs  multi_token.rs  multimodal.rs  responses_basic.rs  responses_structured.rs  responses_tools.rs  stop_sequences.rs  structured_generation.rs  unicode_payload.rs
tests/golden/: golden_io.rs  golden_path.rs
tests/golden/data/afmoe/: multi_tool.json  reason_then_structured.json  reason_then_tool.json  thinking_on_off.json  tool_chaining.json  tool_result_grounding.json  tool_selection.json
tests/golden/data/gemma4/: image_edit_tool_blind_verifier.json  image_tool_blind_verifier.json  image_tool_blind_verifier_flux.json  image_tool_self_loop.json  image_tool_self_loop_flux.json  multi_tool.json  reason_then_structured.json  reason_then_tool.json  thinking_on_off.json  tool_chaining.json  tool_result_grounding.json  tool_selection.json
tests/golden/data/gpt_oss/: multi_tool.json  reason_then_structured.json  reason_then_tool.json  thinking_on_off.json  tool_chaining.json  tool_result_grounding.json  tool_selection.json
tests/golden/data/granite_switch/: multi_tool.json  reason_then_tool.json  tool_chaining.json  tool_result_grounding.json  tool_selection.json
tests/golden/data/lfm2/: multi_tool.json  reason_then_tool.json  tool_chaining.json  tool_result_grounding.json  tool_selection.json
tests/golden/data/lfm2_5/: multi_tool.json  reason_then_structured.json  reason_then_tool.json  tool_chaining.json  tool_result_grounding.json  tool_selection.json
tests/golden/data/llama3/: multi_tool.json  reason_then_tool.json  tool_chaining.json  tool_result_grounding.json  tool_selection.json
tests/golden/data/moondream3/: image_edit_tool_blind_verifier.json  image_edit_tool_blind_verifier_flux.json  image_tool_blind_verifier.json  image_tool_blind_verifier_flux.json  reason_then_structured.json  thinking_on_off.json
tests/golden/data/nemotron_h/: multi_tool.json  reason_then_structured.json  reason_then_tool.json  thinking_on_off.json  tool_chaining.json  tool_result_grounding.json  tool_selection.json
tests/golden/data/olmo_hybrid/: multi_tool.json  reason_then_tool.json  tool_chaining.json  tool_result_grounding.json  tool_selection.json
tests/golden/data/qwen3_5/: multi_tool.json  reason_then_structured.json  reason_then_tool.json  thinking_on_off.json  tool_chaining.json  tool_result_grounding.json  tool_selection.json
tests/project/: fixture.rs  shared_prefix_bench.rs
tests/unit/: README.md
