[package]
name = "orchard-rs"
version = "2026.1.3"
edition = "2021"
description = "Rust client for Orchard - high-performance LLM inference on Apple Silicon"
license = "Apache-2.0"
repository = "https://github.com/TheProxyCompany/orchard-rs"
keywords = ["llm", "inference", "apple-silicon", "nng", "ipc"]
categories = ["api-bindings", "asynchronous"]

[lib]
name = "orchard"
crate-type = ["lib"]

[dependencies]
# NNG for IPC communication with PIE
nng = "1.0"

# Async runtime
tokio = { version = "1", features = ["sync", "rt", "macros", "process", "fs", "io-util", "time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for binary fetching
reqwest = { version = "0.12", features = ["stream", "json"] }

# Cryptography for SHA256 verification
sha2 = "0.10"

# Archive extraction
flate2 = "1"
tar = "0.4"

# HuggingFace Hub integration
hf-hub = { version = "0.3", features = ["tokio"] }

# Templating engine (Jinja2-compatible)
minijinja = "2"
minijinja-contrib = { version = "2", features = ["pycompat"] }

# File locking for cross-process coordination
fs4 = "0.9"

# Base64 decoding for multimodal content
base64 = "0.22"

# Regex for placeholder parsing
regex = "1"

# Utilities
thiserror = "2"
dirs = "5"
log = "0.4"
futures = "0.3"
async-trait = "0.1"
rand = "0.8"
hex = "0.4"

# Unix system calls (Unix only)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
tempfile = "3"
ctor = "0.2"
